# mjlab-mcp-server

./: .gitignore  README.md  TEST_REPORT.md  pyproject.toml
assets/ur5e_e_urdf/: policy.yaml
src/mjlab_mcp_server/: __init__.py  advanced_tools.py  batch_validator.py  physics.py  reality_sync.py  renderer.py  semantic_translator.py  server.py
tests/: __init__.py  test_ik_joints.py  test_new_features.py  test_physics.py
